<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="com.jobplanet.company.domain.model.Company" />

        <variable
            name="viewModel"
            type="com.jobplanet.company.ui.company.company.CompanyViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.CompanySearch.AppBarOverlay">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                style="@style/Widget.MaterialComponents.ActionBar.Primary"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:contentInsetStartWithNavigation="0dp"
                app:layout_collapseMode="pin"
                app:menu="@menu/menu_company"
                app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
                app:title="@string/title_company"
                app:titleTextColor="?attr/colorOnPrimary" />
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:theme="@style/Theme.Layout.Detail.BG"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/Theme.Layout.Detail.Main"
                android:elevation="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_header"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/list_item_height"
                    android:paddingStart="@dimen/fragment_company_layout_padding"
                    android:paddingEnd="@dimen/fragment_company_layout_padding"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/logo_path"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        app:companyLogo="@{model.logo_path}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:shapeAppearanceOverlay="@style/imageview_logo_rounded_corner"
                        app:strokeColor="@color/grey_200"
                        app:strokeWidth="2dp" />

                    <TextView
                        android:id="@+id/tv_company_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/fragment_company_layout_padding"
                        android:layout_marginEnd="@dimen/fragment_company_layout_padding"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@{model.name}"
                        android:textColor="?android:textColorPrimary"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/logo_path"
                        app:layout_constraintTop_toTopOf="@id/logo_path"
                        tools:text="Paper CompanyPaper CompanyPaper CompanyPaper CompanyPaper CompanyPaper CompanyPaper CompanyPaper CompanyPaper CompanyPaper CompanyPaper Company" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/layout_rate"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/bg_rate_total_avg"
                        app:layout_constraintBottom_toBottomOf="@id/logo_path"
                        app:layout_constraintStart_toStartOf="@id/tv_company_name"
                        app:layout_constraintTop_toBottomOf="@id/tv_company_name">

                        <com.google.android.material.imageview.ShapeableImageView
                            android:id="@+id/img_rate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/item_rate_margin_start"
                            android:src="@drawable/ic_baseline_star_24"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/item_rate_margin_start"
                            android:layout_marginEnd="@dimen/item_rate_margin_end"
                            android:text="@{String.valueOf(model.rate_total_avg)}"
                            android:textColor="@color/yellow_700"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@id/img_rate"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:text="5.0" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/item_industry_margin"
                        android:text="@{model.industry_name}"
                        android:textColor="?android:textColorSecondary"
                        app:layout_constraintBottom_toBottomOf="@id/layout_rate"
                        app:layout_constraintStart_toEndOf="@id/layout_rate"
                        app:layout_constraintTop_toTopOf="@id/layout_rate"
                        tools:text="제조/화학" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:theme="@style/Theme.CompanySearch.UnderLineView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/layout_header" />

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constrainedHeight="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/layout_header">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/layout_main"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/fragment_company_layout_padding"
                            app:layout_constraintBottom_toTopOf="@id/layout_bottom"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <TextView
                                android:id="@+id/tv_summary"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@{model.review_summary}"
                                android:textColor="?android:textColorPrimary"
                                android:textSize="18sp"
                                android:textStyle="bold"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                tools:text="학습지 시장에서 높은 인지도를 가지고 있으나,\n학습지업 자체가 하락세이며 영업압박이 심함" />

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:id="@+id/layout_salary_info"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="20dp"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@id/tv_summary">

                                <TextView
                                    android:id="@+id/tv_title_salary"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginBottom="2dp"
                                    android:text="@string/title_avg_salary"
                                    android:textColor="@color/green_a700"
                                    app:layout_constraintBottom_toBottomOf="@+id/tv_desc_salary"
                                    app:layout_constraintStart_toStartOf="parent" />

                                <TextView
                                    android:id="@+id/tv_desc_salary"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="10dp"
                                    android:text="@{@string/price_format(Integer.parseInt(model.salary_avg))}"
                                    android:textColor="?android:textColorPrimary"
                                    android:textSize="20sp"
                                    android:textStyle="bold"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintStart_toEndOf="@id/tv_title_salary"
                                    app:layout_constraintTop_toTopOf="parent"
                                    tools:text="2,389" />

                                <TextView
                                    android:id="@+id/tv_unit_salary"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="2dp"
                                    android:layout_marginBottom="2dp"
                                    android:text="@string/title_unit_salary"
                                    android:textColor="?android:textColorPrimary"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintStart_toEndOf="@id/tv_desc_salary"
                                    tools:text="만원" />
                            </androidx.constraintlayout.widget.ConstraintLayout>


                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintTop_toBottomOf="@id/layout_salary_info">

                                <TextView
                                    android:id="@+id/tv_title_interview_question"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/title_interview_question"
                                    android:textColor="?android:textColorPrimary"
                                    android:textSize="18sp"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent" />

                                <TextView
                                    android:id="@+id/tv_desc_interview_question"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="4dp"
                                    android:text="@{model.interview_question}"
                                    android:textColor="?android:textColorSecondary"
                                    android:textSize="18sp"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toBottomOf="@+id/tv_title_interview_question"
                                    tools:text="1차) 자기소개와 함께 지원하신 동기 말씀해주세요.\n와이어링 설계에서 무엇이 중요하다고 생각하나\n\n그외 이력서 특이사항 질문\n2차) 학교에서 무엇을 배웠나? \n또는 학교에서 무엇을 하였는가?"

                                    />
                            </androidx.constraintlayout.widget.ConstraintLayout>
                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:theme="@style/Theme.CompanySearch.UnderLineView"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/layout_main" />

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/layout_bottom"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/fragment_company_layout_padding"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent">

                            <com.google.android.material.button.MaterialButton
                                style="?attr/borderlessButtonStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:onClick="@{() -> viewModel.onMoreCompanyInfoClick(model.name)}"
                                android:text="@string/btn_more_company_info"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />
                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </ScrollView>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>