<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="com.jobplanet.company.domain.model.Review" />

        <variable
            name="viewModel"
            type="com.jobplanet.company.ui.company.review.ReviewViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.CompanySearch.AppBarOverlay">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                style="@style/Widget.MaterialComponents.ActionBar.Primary"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:contentInsetStartWithNavigation="0dp"
                app:layout_collapseMode="pin"
                app:menu="@menu/menu_review"
                app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
                app:title="@string/title_review"
                app:titleTextColor="?attr/colorOnPrimary" />
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:theme="@style/Theme.Layout.Detail.BG"
            android:transitionName="shared_element_container"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/Theme.Layout.Detail.Main"
                android:elevation="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_header"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/list_item_height"
                    android:paddingStart="@dimen/fragment_review_layout_padding"
                    android:paddingEnd="@dimen/fragment_review_layout_padding"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/logo_path"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        app:companyLogo="@{model.logo_path}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:shapeAppearanceOverlay="@style/imageview_logo_rounded_corner"
                        app:strokeColor="@color/grey_200"
                        app:strokeWidth="2dp" />

                    <TextView
                        android:id="@+id/tv_company_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/fragment_review_layout_padding"
                        android:layout_marginEnd="@dimen/fragment_review_layout_padding"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@{model.name}"
                        android:textColor="?android:textColorPrimary"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/logo_path"
                        app:layout_constraintTop_toTopOf="@id/logo_path"
                        tools:text="Paper CompanyPaper CompanyPaper CompanyPaper CompanyPaper CompanyPaper CompanyPaper CompanyPaper CompanyPaper CompanyPaper CompanyPaper Company" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/layout_rate"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/bg_rate_total_avg"
                        app:layout_constraintBottom_toBottomOf="@id/logo_path"
                        app:layout_constraintStart_toStartOf="@id/tv_company_name"
                        app:layout_constraintTop_toBottomOf="@id/tv_company_name">

                        <com.google.android.material.imageview.ShapeableImageView
                            android:id="@+id/img_rate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/item_rate_margin_start"
                            android:src="@drawable/ic_baseline_star_24"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/item_rate_margin_start"
                            android:layout_marginEnd="@dimen/item_rate_margin_end"
                            android:text="@{String.valueOf(model.rate_total_avg)}"
                            android:textColor="@color/yellow_700"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@id/img_rate"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:text="5.0" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/item_industry_margin"
                        android:text="@{model.industry_name}"
                        android:textColor="?android:textColorSecondary"
                        app:layout_constraintBottom_toBottomOf="@id/layout_rate"
                        app:layout_constraintStart_toEndOf="@id/layout_rate"
                        app:layout_constraintTop_toTopOf="@id/layout_rate"
                        tools:text="제조/화학" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:theme="@style/Theme.CompanySearch.UnderLineView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/layout_header" />

                <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constrainedHeight="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/layout_header">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/layout_main"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/fragment_review_layout_padding"
                            app:layout_constraintBottom_toTopOf="@id/layout_bottom"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <TextView
                                android:id="@+id/tv_summary"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@{model.review_summary}"
                                android:textColor="?android:textColorPrimary"
                                android:textSize="18sp"
                                android:textStyle="bold"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                tools:text="학습지 시장에서 높은 인지도를 가지고 있으나,\n학습지업 자체가 하락세이며 영업압박이 심함" />


                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="20dp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintTop_toBottomOf="@id/tv_summary">

                                <androidx.constraintlayout.widget.ConstraintLayout
                                    android:id="@+id/layout_pros"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent">

                                    <TextView
                                        android:id="@+id/tv_title_pros"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/title_pros"
                                        android:theme="@style/Review.Pros"
                                        app:layout_constraintStart_toStartOf="parent"
                                        app:layout_constraintTop_toTopOf="parent" />

                                    <TextView
                                        android:layout_width="0dp"
                                        android:layout_height="wrap_content"
                                        android:layout_marginStart="@dimen/fragment_review_layout_padding"
                                        android:text="@{model.pros}"
                                        android:textColor="?android:textColorSecondary"
                                        android:textSize="16sp"
                                        app:layout_constraintEnd_toEndOf="parent"
                                        app:layout_constraintStart_toEndOf="@id/tv_title_pros"
                                        app:layout_constraintTop_toTopOf="parent"
                                        tools:text="돈은 많이주는편. 초봉이 세금띠고 3250정도 되는듯. 6개월 점장생활을 거친뒤, 15개 매장을 관리한다. 편의점 숫자는 전국4등이지만 점포당 매출액은 1위" />
                                </androidx.constraintlayout.widget.ConstraintLayout>

                                <androidx.constraintlayout.widget.ConstraintLayout
                                    android:id="@+id/layout_cons"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="14dp"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toBottomOf="@id/layout_pros">

                                    <TextView
                                        android:id="@+id/tv_title_cons"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/title_cons"
                                        android:theme="@style/Review.Cons"
                                        app:layout_constraintStart_toStartOf="parent"
                                        app:layout_constraintTop_toTopOf="parent" />

                                    <TextView
                                        android:layout_width="0dp"
                                        android:layout_height="wrap_content"
                                        android:layout_marginStart="@dimen/fragment_review_layout_padding"
                                        android:text="@{model.cons}"
                                        android:textColor="?android:textColorSecondary"
                                        android:textSize="16sp"
                                        app:layout_constraintEnd_toEndOf="parent"
                                        app:layout_constraintStart_toEndOf="@id/tv_title_cons"
                                        app:layout_constraintTop_toTopOf="parent"
                                        tools:text="고객의 니즈에 맞춰 제품 제작이 이루어져 관련 기술응용 함에 좋으나 표준 제품 제작보다 시간이 좀 더 투입됨." />
                                </androidx.constraintlayout.widget.ConstraintLayout>

                            </androidx.constraintlayout.widget.ConstraintLayout>
                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:theme="@style/Theme.CompanySearch.UnderLineView"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/layout_main" />

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/layout_bottom"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/fragment_review_layout_padding"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent">

                            <com.google.android.material.button.MaterialButton
                                style="?attr/borderlessButtonStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:onClick="@{() -> viewModel.onMoreReviewInfoClick(model.name)}"
                                android:text="@string/btn_more_review_info"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />
                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.core.widget.NestedScrollView>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>